--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/EvamariaTG/EvaMaria",
+    "website": "https://github.com/JiC54/EvaMaria",
     "repository": "https://github.com/JiC54/EvaMaria",
     "env": {
         "BOT_TOKEN": {
